# hyprclock

./: Cargo.toml  README.md  hyprclock.conf  hyprclock.desktop  style.css
src/: lib.rs  main.rs  mod.rs  settings.ini  style.css  window.rs
src/configuration/: animation.rs  config.rs  env.rs  flags.rs  general.rs  logger.rs  mod.rs  theme.rs  validate.rs
src/debug/: debug.rs  mod.rs
src/gui/: calendar.rs  clock.rs  mod.rs  update_window.rs  window.rs
src/schemas/: gschemas.compiled  org.cvusmo.Hyprclock.gschema.xml  org.cvusmo.Hyprland.gschema.xml
