[package]
name = "hyprclock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
config = "0.14.1"
dirs = "5.0.1"
fern = "0.7.0"
gtk4 = "0.9.4"
gdk4 = "0.9.4"
glib = "0.20.6"
log = "0.4.22"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
