[package]
name = "hyprclock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
config = "0.15.11"
dirs = "6.0.0"
fern = "0.7.1"
gtk4 = "0.9.6"
gdk4 = "0.9.6"
glib = "0.20.9"
icalendar = "0.16.13"
log = "0.4.27"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
